Spacing issues

--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,9 @@ h2 {
 
 .input-flex {
   display: flex;
+  margin: 10px;
+  align-items: flex-end;
+  justify-content: space-between
 }
 
 h3 {
@@ -64,10 +67,12 @@ h3 {
   font-size: medium;
   margin: 10px;
   letter-spacing: .5px;
+  margin-bottom: 8px;
 }
 
 label {
   color: #7A7B82;
+  margin-bottom: 5px;
 }
 
 .btn {
@@ -77,11 +82,18 @@ label {
   padding: 5px;
   font-weight: 600;
   font-size: small;
+  height: 36px;
 }
 
 .text-input {
   height: 36px;
 }
+
+.text-input-columns {
+  display: flex;
+  flex-direction: column;
+}
+
 
 .current-range-statement {
   margin: 10px;
@@ -156,6 +168,7 @@ h4 {
 .game-end-card-champion-name {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .winner-name {
@@ -163,13 +176,13 @@ h4 {
   font-weight: 800;
   color: #606060;
   margin-top: 20px;
+  padding: auto;
 }
 
 .winner {
   font-size: 20px;
   font-weight: 100;
   margin-bottom: 20px;
-
 }
 
 .game-end-card-footer {
